# airflow/api_connexion/endpoints/dag_model_endpoint.py
@@ -17,6 +17,12 @@
 
 # TODO(mik-laj): We have to implement it.
 #     Do you want to help? Please look at: https://github.com/apache/airflow/issues/8128
+from flask import request
+
+from airflow.api_connexion import parameters
+from airflow.api_connexion.schemas.dag_schema import DAGCollection, dags_collection_schema
+from airflow.models import DagModel
+from airflow.utils.session import provide_session
 
 
 def get_dag():
@@ -26,11 +32,20 @@ def get_dag():
     raise NotImplementedError("Not implemented yet.")
 
 
-def get_dags():
+@provide_session
+def get_dags(session):
     """
     Get all DAGs.
     """
-    raise NotImplementedError("Not implemented yet.")
+    offset = request.args.get(parameters.page_offset, 0)
+    limit = min(request.args.get(parameters.page_limit, 100), 100)
+    query = session.query(DagModel)
+
+    query = query.offset(offset).limit(limit)
+
+    dags = query.all()
+
+    return dags_collection_schema.dump(DAGCollection(dag_model=dags, total_entries=0))
 
 
 def patch_dag():
